--- a/calabash-festival/src/index.html
+++ b/calabash-festival/src/index.html
@@ -2,14 +2,53 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CalabashFestival</title>
+  <title>Loading.. NJEIFORBI MUSIC FESTIVAL</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <style>
+    body {background: #444444;margin: 4em; font-family: Dosis, hevetica, arial, sans-serif; font-weight:400;}
+    .animation {
+      /*background:#f6ad2d;*/
+      color:white;
+      text-transform: uppercase;
+      font-size:1.5em;
+      width:200px;
+      border-radius: 50%;
+      height:150px;
+      position:relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      animation: bounceAround 1.1s ease-in-out infinite;
+    }
+    .transition p {
+      margin:0;
+      padding:0;
+      pointer-events: none;
+    }
+    @keyframes bounceAround {
+      0% {transform:translateY(0);}
+      20% {transform:translateY(-60px) rotate(0deg);}
+      25%{transform:translateY(20px) rotate(0deg);}
+      35%, 55%{transform:translateY(0px) rotate(0deg);}
+      60% {transform: translateY(-20px) rotate(0deg);}
+      100%{transform: translateY(-20px) rotate(360deg);}
+    }
+  </style>
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div style="position: absolute;top:50%;left: 50%;transform: translate(-50%, -50%)">
+      <div class="animation">
+        <img src="assets/images/logo.jpeg" style="height:200px;width:200px;border-radius: 50%;border: 8px solid #f6ad2d;" alt="#">
+      </div>
+      <div style="text-align: center;margin-top: 4rem;padding-left: 0.5rem;color: #f6ad2d;font-size: 1.2rem;"><h4>Loading...</h4></div>
+    </div>
+  </app-root>
 </body>
 </html>
